# miniparse

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/repeat/: repeat.py
src/tinyparse/: tinyparse.py
